Fix
Fix projectile crash
Fix Gaia dynamically-added goal troubles